--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "e2e": "ng e2e"
   },
   "private": true,
+  "resolutions": {
+    "@babel/preset-env": "7.5.5"
+  },
   "dependencies": {
     "@angular/animations": "~8.2.14",
     "@angular/common": "~8.2.14",
@@ -21,7 +24,10 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@babel/compat-data": "^7.8.0",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@types/googlemaps": "^3.39.3",
+    "core-js-compat": "^3.10.1",
     "firebase": "^7.12.0",
     "ngx-cookie-service": "^3.0.3",
     "rxjs": "~6.4.0",
@@ -30,7 +36,7 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.900.0-0 || ^0.900.0",
-    "@angular-devkit/build-angular": "^0.1102.6",
+    "@angular-devkit/build-angular": "^0.803.24",
     "@angular/cli": "~8.3.20",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
